<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.sbforge</groupId>
        <artifactId>sbforge-parent</artifactId>
        <version>25</version>
    </parent>

    <groupId>dk.kb.util</groupId>
    <artifactId>kb-util</artifactId>
    <version>3.1.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <scm>
        <url>https://github.com/kb-dk/kb-util</url>
        <connection>scm:git:git@github.com:kb-dk/kb-util.git</connection>
        <developerConnection>scm:git:git@github.com:kb-dk/kb-util.git</developerConnection>
        <tag>kb-util-2.0.1</tag>
    </scm>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <repositories>
        <repository>
            <id>sbforge-nexus</id>
            <url>https://sbforge.org/nexus/content/groups/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <properties>
        <!-- Specify java version here, to support forbiddenapis plugin -->
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <!-- Replace the line below with
             <api.check.phase>none</api.check.phase>
             to disable forbidden APIs check -->
        <api.check.phase>process-test-classes</api.check.phase>

        <test.property>This is a test property</test.property>

        <!-- Needed to populate kbutil.build.properties -->
        <timestamp>${maven.build.timestamp}</timestamp>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.xmlunit</groupId>
                <artifactId>xmlunit-bom</artifactId>
                <version>2.13.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson/jackson-bom -->
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>2.22.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <!-- https://mvnrepository.com/artifact/org.junit/junit-bom -->
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>6.1.3</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <!-- https://mvnrepository.com/artifact/org.mockito/mockito-bom -->
                <groupId>org.mockito</groupId>
                <artifactId>mockito-bom</artifactId>
                <version>5.23.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-core</artifactId>
                <version>3.0</version>
            </dependency>
            <dependency>
                <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest</artifactId>
                <version>3.0</version>
            </dependency>

            <dependency>
                <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-bom -->
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-bom</artifactId>
                <version>2.0.18</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>jakarta.validation</groupId>
                <artifactId>jakarta.validation-api</artifactId>
                <version>3.1.1</version>
            </dependency>

            <dependency>
                <groupId>jakarta.ws.rs</groupId>
                <artifactId>jakarta.ws.rs-api</artifactId>
                <version>4.0.0</version>
            </dependency>

            <dependency>
                <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>4.6.0</version>
            </dependency>

            <!--JAXB-->
            <dependency>
                <!-- https://mvnrepository.com/artifact/jakarta.xml.bind/jakarta.xml.bind-api -->
                <groupId>jakarta.xml.bind</groupId>
                <artifactId>jakarta.xml.bind-api</artifactId>
                <version>4.0.5</version>
            </dependency>
            <dependency>
                <!-- https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime -->
                <groupId>org.glassfish.jaxb</groupId>
                <artifactId>jaxb-runtime</artifactId>
                <version>4.0.9</version>
            </dependency>


            <dependency>
                <!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>2.5</version>
            </dependency>

            <!--Utils-->
            <dependency>
                <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-text</artifactId>
                <version>1.14.0</version>
            </dependency>
            <dependency>
                <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-csv</artifactId>
                <version>1.14.1</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.22.0</version>
            </dependency>

            <!--Web-->
            <dependency>
                <groupId>jakarta.servlet</groupId>
                <artifactId>jakarta.servlet-api</artifactId>
                <version>6.1.0</version>
            </dependency>
            <dependency>
                <!-- https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-jaxrs2-jakarta -->
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-jaxrs2-jakarta</artifactId>
                <version>2.2.39</version>
            </dependency>
            <dependency>
                <!-- https://mvnrepository.com/artifact/org.apache.cxf/cxf-bom -->
                <groupId>org.apache.cxf</groupId>
                <artifactId>cxf-bom</artifactId>
                <version>4.2.3</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>


            <dependency>
                <!-- Only used for Iterators in ExtractionUtils. Could we do without? -->
                <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>33.5.0-jre</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>kb-util-core</module>
        <module>kb-util-xml</module>
        <module>kb-util-web</module>
        <module>kb-util-json</module>
        <module>kb-util-yaml</module>
        <module>kb-util-misc</module>
    </modules>

    <build>
        <plugins>

            <!-- Plugin used to extract information on the current git setup.
                 See: https://github.com/git-commit-id/git-commit-id-maven-plugin -->
            <plugin>
                <groupId>io.github.git-commit-id</groupId>
                <artifactId>git-commit-id-maven-plugin</artifactId>
                <version>9.0.2</version>
                <executions>
                    <execution>
                        <id>get-the-git-infos</id>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                        <phase>initialize</phase>
                    </execution>
                </executions>
                <configuration>
                    <includeOnlyProperties>
                        <includeOnlyProperty>git.commit.id</includeOnlyProperty>
                        <includeOnlyProperty>git.branch</includeOnlyProperty>
                        <includeOnlyProperty>git.tag</includeOnlyProperty>
                        <includeOnlyProperty>git.closest.tag.name</includeOnlyProperty>
                        <includeOnlyProperty>git.commit.author.time</includeOnlyProperty>
                    </includeOnlyProperties>
                    <replacementProperties>
                        <replacementProperty>
                            <property>git.tag</property>
                            <regex>false</regex>
                            <token>git.tag</token>
                            <value>unknown</value>
                        </replacementProperty>
                        <!--<replacementProperty>
                            <regex>true</regex>
                            <token>git\.[^.\\s]+</token>
                            <value>unknown</value>
                        </replacementProperty>-->
                    </replacementProperties>
                </configuration>
            </plugin>

            <plugin>
                <groupId>de.thetaphi</groupId>
                <artifactId>forbiddenapis</artifactId>
                <version>3.10</version>
            </plugin>
        </plugins>
    </build>
</project>
